# ifc-lite

./: package.json  pnpm-lock.yaml
.changeset/: add-element-instant-3d.md  advanced-face-holes-674.md  annotate-in-3d.md  auto-space-debug-and-axis-rep.md  auto-spaces-from-walls.md  bim-store-namespace.md  door-handle-sor-axis-slot-674.md  duplicate-from-selection.md  ifc-annotation-section-overlay-812.md  parser-worker-sab.md  pointcloud-inline-decode-worker.md  raw-step-drill-and-cleanup.md  sab-safe-step-export.md  section-2d-line-pipeline-webgpu-fix.md  step-exporter-overlay-filters.md
.github/workflows/: desktop-compat.yml  docker.yml  docs.yml  release.yml  test-templates.yml  test.yml
apps/desktop/: CHANGELOG.md  package.json
apps/landing/: README.md  app.jsx  index.html  robots.txt  sitemap.xml  styles.css  vercel.json
apps/landing/samples/: hello-wall.gltf  hello-wall.ifcx.json  hello-wall.parquet
apps/server/src/routes/: parse.rs
apps/server/src/services/: parquet.rs  parquet_optimized.rs
apps/viewer/: CHANGELOG.md  package.json  tsconfig.json  vite.config.ts
apps/viewer-embed/: index.html  package.json  tsconfig.json
apps/viewer-embed/src/components/: EmbedViewer.tsx
apps/viewer/src/: apache-arrow.d.ts  index.css
apps/viewer/src/hooks/: federationLoadGate.test.ts  federationLoadGate.ts  useBCF.ts  useIfcFederation.ts  useIfcLoader.ts  useKeyboardShortcuts.ts  useSandbox.ts  useSymbolicAnnotations.ts
apps/viewer/src/lib/: recent-files.ts
apps/viewer/src/sdk/: local-backend.ts
apps/viewer/src/services/: desktop-export.ts  desktop-native-metadata.ts  file-dialog.ts  tauri-modules.d.ts
apps/viewer/src/store/: basketVisibleSet.ts  index.ts
apps/viewer/src/utils/: acquireFileBuffer.ts  createBlankIfc.ts  ifcConfig.ts
docs/api/: typescript.md
docs/architecture/: single-controller-rayon-design.md  streaming-load-design.md
docs/guide/: mutations.md
examples/babylonjs-viewer/: package.json
examples/collab-demo/: package.json
examples/threejs-collab/: package.json
examples/threejs-viewer/: package.json
rust/core/src/: decoder.rs  parser.rs
rust/geometry/tests/: issue_604_door_regression.rs
rust/wasm-bindings/: Cargo.toml
rust/wasm-bindings/src/: lib.rs
rust/wasm-bindings/src/api/: gpu_meshes.rs  mod.rs  styling.rs
scripts/: build-wasm.sh
(+48 files in other folders)
