[package]
name = "ifc-lite-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for IFC-Lite"
keywords = ["ifc", "bim", "wasm", "webassembly", "aec"]
categories = ["wasm", "parsing"]
readme = "../../README.md"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
debug_geometry = ["ifc-lite-geometry/debug_geometry"]
# Enables wasm-bindgen-rayon thread-pool init for the multi-threaded
# build target. Only set by `THREADED=1 scripts/build-wasm.sh`. Build
# also requires the threading RUSTFLAGS (atomics, shared-memory,
# import-memory, TLS exports) the script applies. See
# docs/architecture/single-controller-rayon-design.md §5.6.
threading = ["dep:wasm-bindgen-rayon"]

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
futures-util = "0.3"
# gloo-timers removed — sync processing for speed
ifc-lite-core.workspace = true
ifc-lite-geometry.workspace = true
js-sys = "=0.3.83"
rayon = "1.10"
# CRITICAL for wasm-bindgen-rayon to actually parallelize: the
# `web_spin_lock` rayon-core feature replaces std::sync::Mutex in
# rayon's work-stealing coordination paths with a spin-lock. Without
# this, std::sync::Mutex blocks/zombies inside wasm32 helper workers
# and rayon helpers report "ready" but never actually steal work —
# par_iter silently runs serial. (Empirically observed: 4.2× SLOWER
# than N-worker baseline before this fix.)
rayon-core = { version = "1", features = ["web_spin_lock"] }
rustc-hash = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "=0.6.5"
thiserror = "1.0"
wasm-bindgen = "=0.2.106"
wasm-bindgen-futures = "=0.4.56"
# Optional. Enabled only by `--features threading` (set by
# `THREADED=1 scripts/build-wasm.sh`). The single-threaded build
# omits this entirely so the default WASM bundle stays slim.
wasm-bindgen-rayon = { version = "1.3", optional = true }
web-sys = { version = "=0.3.83", features = ["console", "Performance", "Window"] }

[dev-dependencies]
wasm-bindgen-test = "=0.3.43"
